# python-sdk

./: README.md  config.json  input.json  main.py  setup.cfg
friday/handlers/: config.py  handler.py
friday/skill/: response.py
src/friday/: __init__.py
src/friday/handlers/: __init__.py  input.py
src/friday/skill/: __init__.py  fridaySkill.py
