[metadata]
name = friday
version = 0.1.4
author = friday-ai.de
author_email = hey@friday-ai.de
description = The python sdk for friday
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/hey-friday/python-sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src